--- a/client/css/style.css
+++ b/client/css/style.css
@@ -4,3 +4,35 @@ body, html {
 	height: 100%;
 	background-color: #2d2d2d;
 }
+
+#chat-container {
+	width: calc(100% - 48px);
+	height: 140px;
+	position: absolute;
+	bottom: 0;
+	padding: 0 24px;
+	left: 0;
+}
+
+#chat-text {
+	width:100%;
+	height:100px;
+	overflow-y: auto;
+	color: white;
+}
+
+#chat-form {
+	width:100%;
+	height:40px;
+}
+
+#chat-input {
+	width:100%;
+	height:30px;
+	overflow: overlay;
+	background-color: #00000000;
+	border:none;
+	color: white;
+	padding: 0 12px;
+	outline: none;
+}
